--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.5",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
