--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.5",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
   }
